feat(users): agregar validacion de placa por tipo de vehiculo, telefono y dni
